# trade

./: .gitignore  environment.yaml  option_trades.ipynb  pyproject.toml  setup.py
config/: constants_short_put_credit_spreads.py
dash_test/: dashapp.py  thing.py
notebooks/: bonus_vs_equity.ipynb  earnings_dates.ipynb  option_trades.ipynb  return_distribution.ipynb  test_options.ipynb  test_put_spread_screener.ipynb  test_stocks.ipynb
src/trade/: options.py  search_trades.py  spreads.py  stocks.py  tradable_instrument.py  utils.py
src/trade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trade/spreads/: bull_put_spread.py
