[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade"
version = "0.1.0"
description = "A sample Python package"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.18.0",
]
authors = [
    { name = "Your Name", email = "chavezomard@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["sample", "python", "package"]
